--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "better-sqlite3": "^11.5.0",
     "dotenv": "^16.4.5",
     "kysely": "^0.27.4",
+    "mozjpeg": "^8.0.0",
     "promisify-child-process": "^4.1.2",
     "rss-parser": "^3.13.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.11",
+    "@types/mozjpeg": "^5.0.2",
     "@types/node": "^22.8.1",
     "eslint": "^9.13.0"
   }
