--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -16,6 +16,7 @@ jobs:
     - uses: pnpm/action-setup@v4
       with:
         version: 9
+    - run: pnpm install
     - run: pnpx tsx src/index.ts
       env:
         FEED_URL: https://www.pcgamer.com/feeds.xml
