--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,6 +7,12 @@ on:
   push:
     branches: [ "master" ]
 
+concurrency:
+  group: ${{ github.workflow }}
+  cancel-in-progress: true
+
+permissions: write-all
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,3 +28,5 @@ jobs:
         FEED_URL: https://www.pcgamer.com/feeds.xml
         BSKY_USERNAME: ${{ secrets.BSKY_USERNAME }}
         BSKY_PASSWORD: ${{ secrets.BSKY_PASSWORD }}
+        USE_ACTIONS: 1
+        GITHUB_TOKEN: ${{ github.token }}
