--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "kysely": "^0.27.4",
     "mozjpeg": "^8.0.0",
     "promisify-child-process": "^4.1.2",
-    "rss-parser": "^3.13.0"
+    "rss-parser": "^3.13.0",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.11",
